--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -3,34 +3,46 @@
 
 <!-- code_chunk_output -->
 
-- [1. QEMU 的主要工作](#1-qemu-的主要工作)
-- [2. QEMU 和 KVM 的工作分界](#2-qemu-和-kvm-的工作分界)
-- [3. QEMU中物理内存的注册](#3-qemu中物理内存的注册)
-- [4. 处理用户态虚拟地址](#4-处理用户态虚拟地址)
-- [5. KVM同步脏页位图到Qemu](#5-kvm同步脏页位图到qemu)
-- [6. EPT页表映射](#6-ept页表映射)
+- [1. 概述](#1-概述)
+- [2. QEMU 的主要工作](#2-qemu-的主要工作)
+- [3. QEMU 和 KVM 的工作分界](#3-qemu-和-kvm-的工作分界)
+- [4. QEMU中物理内存的注册](#4-qemu中物理内存的注册)
+- [5. 处理用户态虚拟地址](#5-处理用户态虚拟地址)
+- [6. KVM同步脏页位图到Qemu](#6-kvm同步脏页位图到qemu)
+- [7. EPT页表映射](#7-ept页表映射)
 
 <!-- /code_chunk_output -->
 
-# 1. QEMU 的主要工作
+# 1. 概述
+
+在**虚拟机启动**时, 由qemu在**qemu的进程地址空间申请内存**, 即**内存的申请**是在**用户空间**完成的, 申请的是**主机虚拟地址空间**, 而这个空间就作为**虚拟机物理内存**.
+
+通过**kvm提供的API**, 把**地址信息注册到KVM**中, 这样KVM中维护有**虚拟机相关的slot**, **所有这些slot**构成一个**完整的虚拟机物理地址空间**. slot中记录其对应的HVA、页面数、起始GPA等, 利用它可以将一个GPA转化为HVA.
+
+整个内存虚拟化可以分为两部分: qemu部分和kvm部分.
+
+- **QEMU**完成**内存的申请**
+- **KVM**实现**内存的管理**
+
+# 2. QEMU 的主要工作
 
 查看QEMU/memory
 
-# 2. QEMU 和 KVM 的工作分界
+# 3. QEMU 和 KVM 的工作分界
 
 QEMU 和 KVM 之间是通过 KVM 提供的`ioctl()`接口进行交互的。
 
-# 3. QEMU中物理内存的注册
+# 4. QEMU中物理内存的注册
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现, 这个 ioctl 主要目的就是设置`GPA->HVA`的映射关系
 
 本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
 
-# 4. 处理用户态虚拟地址
+# 5. 处理用户态虚拟地址
 
 https://blog.csdn.net/jinzhuojun/article/details/8147463
 
-# 5. KVM同步脏页位图到Qemu
+# 6. KVM同步脏页位图到Qemu
 
 https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
 
@@ -38,7 +50,7 @@ https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F
 
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
-# 6. EPT页表映射
+# 7. EPT页表映射
 
 内存的添加说完了，看一下[EPT页表](http://www.oenhan.com/kernel-program-exec)的映射，在`kvm_arch_vcpu_setup`中有`kvm_mmu_setup`，是mmu的初始化，EPT的初始化是`init_kvm_tdp_mmu`，所谓的初始化就是填充了`vcpu->arch.mmu`结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`。
 
