--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
@@ -190,6 +190,14 @@ struct MemoryRegion {
 
 **结构体MemoryRegion**是联系**guest物理地址空间**和描述**真实内存的RAMBlocks(宿主机虚拟地址**)之间的桥梁。
 
+其中parent指向父MR, 默认是NULL;
+
+size表示区域的大小; 
+
+ram_block比较重要, 是分配的实际内存. 
+
+alias表明该区域是某一个区域的一部分区域, 实际上虚拟机的ram申请时一次性申请一个完整的ram, 记录在一个MR中, 之后又会对此ram按照size划分, 形成subregion, 而subregion的alias便指向原始的MR, 而alias_offset便是在原始ram中的偏移. 对于系统地址空间的ram, 会把刚才得到的subregion注册到系统中, 父MR是刚才提到的全局MR system_memory. 实际关联host内存的是subregion->alias指向的MR, 其ram_ad
+
 ### 2.2.1. 树结构? 其实只有一个root
 
 QEMU通过MemoryRegion来管理虚拟机内存，通过内存属性，GUEST物理地址等特点对内存分类，就形成了多个MemoryRegion，这些MemoryRegion 通过树状组织起来，挂接到根MemoryRegion下。每个MemoryRegion树代表了一类作用的内存，如系统内存空间(system_memory)或IO内存空间(system_io),这两个是qemu中的两个全局MemoryRegion。
