--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
@@ -196,7 +196,7 @@ size表示区域的大小;
 
 ram_block比较重要, 是分配的实际内存. 
 
-alias表明该区域是某一个区域的一部分区域, 实际上虚拟机的ram申请时一次性申请一个完整的ram, 记录在一个MR中, 之后又会对此ram按照size划分, 形成subregion, 而subregion的alias便指向原始的MR, 而alias_offset便是在原始ram中的偏移. 对于系统地址空间的ram, 会把刚才得到的subregion注册到系统中, 父MR是刚才提到的全局MR system_memory. 实际关联host内存的是subregion->alias指向的MR, 其ram_ad
+alias表明该区域是某一个区域的一部分区域, 实际上虚拟机的ram申请时一次性申请一个完整的ram, 记录在一个MR中, 之后又会对此ram按照size划分, 形成subregion, 而subregion的alias便指向原始的MR, 而alias_offset便是在原始ram中的偏移. 对于系统地址空间的ram, 会把刚才得到的subregion注册到系统中, 父MR是刚才提到的全局MR system_memory. 实际关联host内存的是subregion->alias指向的MR, 其ram_block实际保存gpa到hva的映射关系.
 
 ### 2.2.1. 树结构? 其实只有一个root
 
@@ -267,7 +267,7 @@ struct RAMBlock {
 };
 ```
 
-理论上**一个RAMBlock**就代表**host的一段虚拟内存**，host指向**申请的ram的虚拟地址**,是HVA。
+理论上**一个RAMBlock**就代表**host的一段虚拟内存**，host指向**申请的ram的虚拟地址**, 是HVA。
 
 **RAMBlock结构体**中的
 
