--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/2. 主要数据结构.md
@@ -99,6 +99,8 @@ memory_region_init_io(system_io, NULL, &unassigned_io_ops, NULL, "io", 65536);
 address_space_init(&address_space_io, system_io, "I/O");   
 ```
 
+root指向根MR, 对于`address_space_memory`来说, root指向系统全局的MR system_memory.
+
 ### 2.1.1. 全局链表
 
 **所有的AddressSpace**是通过一个**全局链表**`address_spaces`链接起来, 每个 AddressSpace 的`address_spaces_link`作为链表节点.
@@ -312,7 +314,13 @@ RAMList ram_list = { .blocks = QLIST_HEAD_INITIALIZER(ram_list.blocks) };
 
 ## 2.4. Address, MemoryRegion, RAMBlock关系
 
-qemu层的内存管理分为三个层次, MR位于顶级抽象层或者说偏向于host端, qemu中两个全局的MR, 分别是system_memory和system_io, 不过两个均是以指针的形式存在, 在地址空间的时候才会对其分配具体
+qemu层的内存管理分为三个层次, 
+
+- MR位于顶级抽象层或者说偏向于host端, qemu中两个全局的MR, 分别是system_memory和system_io, 不过两个均是以指针的形式存在, 在地址空间的时候才会对其分配具体的内存并初始化. MR负责管理host的内存, 是树状结构.
+
+- AddressSpace更偏向于虚拟机, 管理地址空间, qemu中有几个全局的AS, address_space_memory和address_space_io, 一个管理系统地址空间, 一个是IO地址空间
+
+- 
 
 ![](./images/2019-06-12-15-16-52.png)
 
