--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
@@ -1487,9 +1487,9 @@ static void address_space_update_topology_pass(AddressSpace *as,
 
 1、如果`frold不为空&&（frnew为空||frold.start<frnew.start||frold.start=frnew.start）&&frold!=frnew`: 这种情况是**新旧view的地址范围不一样**，则需要调用lienter的`region_del`对**frold进行删除！！！**。
 
-2、如果`frold和frnew均不为空且frold.start=frnew.start`: 这种情况需要判断**日志掩码**，如果`frold->dirty_log_mask && !frnew->dirty_log_mask`，调用log_stop回调函数；如果`frnew->dirty_log_mask && !frold->dirty_log_mask`，调用log_start回调函数。
+2、如果**frold和frnew均不为空**且`frold.start=frnew.start`: 这种情况需要判断**日志掩码**，如果`frold->dirty_log_mask && !frnew->dirty_log_mask`，调用`log_stop`回调函数；如果`frnew->dirty_log_mask && !frold->dirty_log_mask`，调用`log_start`回调函数。
 
-3、frold为空但是frnew不为空: 这种情况直接调用region_add回调函数**添加region**。
+3、**frold为空**但是**frnew不为空**: 这种情况直接调用`region_add`回调函数**添加region**。
 
 函数主体逻辑基本如上所述，那我们注意到，当**adding为false**时，执行的**只有第一个情况**下的处理，就是删除frold的操作，其余的处理只有在**adding 为true**的时候才得以执行。这意图就比较明确，**首次执行先删除多余的**，下次**直接添加**或者**对日志做更新操作**了。
 
