--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
@@ -26,9 +26,9 @@
     - [5.1.2. kvm_align_section(): 得到section/fr的起始地址和大小](#512-kvm_align_section-得到sectionfr的起始地址和大小)
     - [5.1.3. 计算该section/fr对应的主机虚拟机地址(HVA)](#513-计算该sectionfr对应的主机虚拟机地址hva)
     - [5.1.4. kvm_set_user_memory_region(): 转化为slot然后注册到KVM](#514-kvm_set_user_memory_region-转化为slot然后注册到kvm)
-- [MMIO退出的处理](#mmio退出的处理)
-- [6. 总结](#6-总结)
-- [7. 参考](#7-参考)
+- [6. MMIO退出的处理](#6-mmio退出的处理)
+- [7. 总结](#7-总结)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1513,10 +1513,11 @@ static inline MemoryRegionSection
 section_from_flat_range(FlatRange *fr, FlatView *fv)
 {
     return (MemoryRegionSection) {
+        // fr对应的mr
         .mr = fr->mr,
         .fv = fv,
         .offset_within_region = fr->offset_in_region, // 在mr中的offset
-        .size = fr->addr.size, // 大小
+        .size = fr->addr.size, // fr在as中所占大小
         .offset_within_address_space = int128_get64(fr->addr.start), // 在虚拟机物理地址空间的起始地址, GPA
         .readonly = fr->readonly, // 是否可写
         .nonvolatile = fr->nonvolatile,
@@ -1954,7 +1955,7 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 
 至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
 
-# MMIO退出的处理
+# 6. MMIO退出的处理
 
 由于 mmio 导致的退出, `kvm_cpu_exec --> case KVM_EXIT_MMIO --> address_spaces_rw --> address_space_rw --> io_mem_write`
 
@@ -2024,7 +2025,7 @@ MemTxResult address_space_write(AddressSpace *as, hwaddr addr,
 ```
 
 
-# 6. 总结
+# 7. 总结
 
 1. 全局MemoryRegion: system_memory以及system_io的初始化
 
@@ -2064,7 +2065,7 @@ MemTxResult address_space_write(AddressSpace *as, hwaddr addr,
 
 ![2020-03-12-15-27-49.png](./images/2020-03-12-15-27-49.png)
 
-# 7. 参考
+# 8. 参考
 
 https://www.cnblogs.com/ck1020/p/6729224.html (已完)
 
