--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. 内存虚拟化/3. 具体实现机制.md
@@ -2024,8 +2024,11 @@ MemTxResult address_space_write(AddressSpace *as, hwaddr addr,
 }
 ```
 
-
 # 7. 总结
+
+qemu向KVM注册内存的流程:
+
+![2020-04-18-17-58-12.png](./images/2020-04-18-17-58-12.png)
 
 1. 全局MemoryRegion: system_memory以及system_io的初始化
 
