--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -8,3 +8,8 @@
 
 PIT(Programmable Interval Timer), 可编程间隔定时器
 
+每个PC机中都有一个PIT, 通过IRQ产生周期性的时钟中断信号来充当系统定时器.
+
+i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h.
+
+8254 PIT有3个计时通道,
