--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -12,4 +12,6 @@ PIT(Programmable Interval Timer), 可编程间隔定时器
 
 i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h.
 
-8254 PIT有3个计时通道,
+8254 PIT有3个计时通道, 每个通道都有其不同的用途:
+
+- 通道0用来负责更新系统时钟. 
