--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -3,8 +3,8 @@
 
 <!-- code_chunk_output -->
 
-- [ 1 x86平台的常用时钟](#1-x86平台的常用时钟)
-- [ 2 操作系统的时钟观](#2-操作系统的时钟观)
+- [1 x86平台的常用时钟](#1-x86平台的常用时钟)
+- [2 操作系统的时钟观](#2-操作系统的时钟观)
 
 <!-- /code_chunk_output -->
 
@@ -12,9 +12,9 @@
 
 时钟根据**工作方式**不同, 可以分为如下两类.
 
-⓵ 周期性时钟(Periodic Timer): 时钟以固定频率产生时钟中断. 通常, 周期性时钟会有一个计数器, 要么以固定值递减到0产生中断, 例如PIT; 要么固定增长, 当达到某个阙值时产生中断, 同时自动将阙值增加一个固定值, 计数器继续递增, 例如HPET.
+⓵ **周期性时钟**(Periodic Timer): 时钟以固定频率产生时钟中断. 通常, 周期性时钟会有一个计数器, 要么以固定值递减到0产生中断, 例如PIT; 要么固定增长, 当达到某个阙值时产生中断, 同时自动将阙值增加一个固定值, 计数器继续递增, 例如HPET.
 
-⓶ 单次计时时钟(One\-shot Timer): 多数时钟都可以配置成这种方式, 例如PIT、HPET. 其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要软件(通常是时钟中断处理函数)增加该阙值. 这提供给软件动态调整下一次时钟中断到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
+⓶ **单次计时时钟**(One\-shot Timer): 多数时钟都可以配置成这种方式, 例如PIT、HPET. 其工作方式和**到达阙值产生中断的周期性时钟**类似, 不同的是**产生中断后阙值不会自动增加**, 而是需要软件(通常是时钟中断处理函数)增加该阙值. 这提供给软件动态调整下一次时钟中断到来时间的能力, 使一些新技术,例如无滴答声内核(Tickles Kernel)的实现成为可能.
 
 # 1 x86平台的常用时钟
 
@@ -26,7 +26,7 @@
 
 (3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 其时钟频率和CPU的频率相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 由于不产生时钟中断, 故无所谓周期性和单次计时方式.
 
-(4) LAPIC Timer: 该时钟是根据LAPIC所在总线(系统总线或APIC总线)频率产生的. 为32位, 有如下两个特点.
+(4) **LAPIC Timer**: 该时钟是根据LAPIC所在总线(系统总线或APIC总线)频率产生的. 为32位, 有如下两个特点.
 
 ⓵ 由于LAPIC是每个CPU一个, 故其中断也是对于本地CPU的(Per CPU Interrupt).
 
