--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -34,7 +34,7 @@
 
 LAPIC Timer可配置成周期性和单次计时两种工作方式.
 
-(5) HPET(High Precision Event Timer, 高精度时间时钟): Intel和微软共同开发的新型高精度时钟, 最低频率10MHz, 可作为64位或32位时钟使用. HPET可以提供最多8个时钟, 典型实现至少有一个时钟可用. HPET时钟通过一个主计数器, 和32个比较器、匹配器一起, 又可以被配置成32个子时钟(又称channel), 每个子时钟可按不同频率产生不同的中断. 例如, 可将一个子时钟配置成每毫秒产生一个IRQ8中断, 另一个子时钟可配置成每毫秒产生一个IRQ0中断. HPET可用于代替传统PIT和RTC, 此时平台的IRQ0、IRQ8中断被HPET占用。 HPET支持周期性和单次计时两种工作方式。
+(5) **HPET**(High Precision Event Timer, 高精度时间时钟): Intel和微软共同开发的新型高精度时钟, 最低频率10MHz, 可作为64位或32位时钟使用. HPET可以提供最多8个时钟, 典型实现至少有一个时钟可用. HPET时钟通过一个主计数器, 和32个比较器、匹配器一起, 又可以被配置成32个子时钟(又称channel), 每个子时钟可按不同频率产生不同的中断. 例如, 可将一个子时钟配置成每毫秒产生一个IRQ8中断, 另一个子时钟可配置成每毫秒产生一个IRQ0中断. HPET可用于代替传统PIT和RTC, 此时平台的IRQ0、IRQ8中断被HPET占用。 HPET支持周期性和单次计时两种工作方式。
 
 同时使用多个时钟带来一个明显缺点是**过多时钟中断会影响系统的性能(！！！**). 所以, 当高精度时钟可用, **OS通常会禁用低精度时钟(！！！**), 并根据需要使用**高精度时钟模拟低精度时钟**.
 
