--- Auto-Git Commit ---

--- a/Architecture/x86/7. 时钟.md
+++ b/Architecture/x86/7. 时钟.md
@@ -22,6 +22,12 @@
 
 (1) **PIT**(Programmable Interrupt Timer或Programmable Interval Timer, **可编程中断/间隔时钟**): IBM PC平台产生, 频率为**1000Hz左右**, 即**每次中断间隔约为1ms**, 通常接**IRQ0**, 软件可以通过**0x40\~0x43 I/O端口**进行操作. PIT是一种低精度的时钟, 容易溢出(16位), 已渐渐被高精度时钟取代. PIT支持周期性和单次计时两种方式.
 
+8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
+
+- **通道0**用来负责**更新系统时钟**. 它在**每个时钟滴答**会通过**IRQ0**向系统发出一次**时钟中断信号**.
+- **通道1**通常用来控制**DMAC对RAM的刷新**
+- **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
+
 (2) **RTC(Real Time Clock, 实时时钟**): 通常**和CMOS集成**在一起, 由**CMOS电池供电**, 故能在**关机后继续计时**. 其频率范围是2\~8192Hz, 通常接**IRQ8**, 软件可以通过**0x70\~0x71 I/O端口**操作. RTC支持周期性和单次计时两种方式, 此外, 它还可以配置成**每秒产生一次中断**, 具有闹钟功能. 由于具有关机继续计时的功能, RTC常被用来作为操作系统提供日期. 即"年/月/日".
 
 (3) **TSC(Time Stamp Counter, 时间戳计数器**): 和普通时钟不同, 可以看作一个**单调递增的计数器(64位**), 是由x86架构引入的. 其时钟频率和CPU的频率相关, 操作系统在使用前**需要计算其频率**, 例如1GHz的TSC, 其值每纳秒增加1. 通过**rdtsc**指令, 可以读取**当前TSC的值**. 由于不产生时钟中断, 故无所谓周期性和单次计时方式.
