--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -5,13 +5,18 @@
 
 ## PIT主要为Intel 8254 PIT芯片
 
-
 PIT(Programmable Interval Timer), 可编程间隔定时器
 
 每个PC机中都有一个PIT, 通过IRQ产生周期性的时钟中断信号来充当系统定时器.
 
 i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h.
 
-8254 PIT有3个计时通道, 每个通道都有其不同的用途:
+8254 PIT有**3个计时通道**, 每个通道都有其不同的用途:
 
-- 通道0用来负责更新系统时钟. 
+- **通道0**用来负责**更新系统时钟**. 它在**每个时钟滴答**会通过**IRQ0**向系统发出一次**时钟中断信号**.
+- **通道1**通常用来控制**DMAC对RAM的刷新**
+- **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
+
+## PIC主要为8259A PIC芯片
+
+PIC(Programmable)
