--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -19,4 +19,6 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h
 
 ## PIC主要为8259A PIC芯片
 
-PIC(Programmable)
+PIC(Programmable Interrupt Controller), 可编程中断控制器
+
+它具有IR0 ~ IR7共8个中断管脚连接到外部设备. 中断管脚具有
