--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -21,4 +21,12 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是40h ~ 43h
 
 PIC(Programmable Interrupt Controller), 可编程中断控制器
 
-它具有IR0 ~ IR7共8个中断管脚连接到外部设备. 中断管脚具有
+它具有IR0 ~ IR7共8个中断管脚连接到外部设备. 中断管脚具有优先级, 其中IR0优先级最高, IR7最低.
+
+PIC有三个重要的寄存器:
+
+(1) IRR(Interrupt Request Register, 中断请求寄存器)共8位, 对应IR0到IR7这8个中断管脚. 某位置为1表明收到了对应管脚的中断但未提交到CPU.
+
+(2) ISR(Interrupt Service Register, 中断请求寄存器): 共8位, 某位置为1表明对应管脚的中断已经提交到CPU处理, 但CPU还未处理完.
+
+(3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
