--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/1. 8259结构.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第17章 8259中断控制器/1. 8259结构.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [8259中断控制器](#8259中断控制器)
 - [1. IRQ的优先级](#1-irq的优先级)
 - [2. 中断请求状态](#2-中断请求状态)
   - [2.1. IRR](#21-irr)
@@ -16,6 +17,8 @@
   - [5.3. 发送EOI命令](#53-发送eoi命令)
 
 <!-- /code_chunk_output -->
+
+# 8259中断控制器
 
 处理器的**INTR pin**接收并响应来自**外部8259中断控制器**传送过来的中断请求. **8259中断控制器**位于**PCI\-to\-ISA bridge(即南桥)芯片**的**LPC控制器**里.
 
