--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -30,3 +30,8 @@ PIC有三个重要的寄存器:
 (2) ISR(Interrupt Service Register, 中断请求寄存器): 共8位, 某位置为1表明对应管脚的中断已经提交到CPU处理, 但CPU还未处理完.
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
+
+# 实现
+
+整个主要流程:
+
