--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -31,7 +31,13 @@ PIC有三个重要的寄存器:
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
-# 实现
+# 整体流程
 
 整个主要流程:
+
+![2020-04-18-17-59.png](./images/2020-04-18-17-59.png)
+
+修正: 重定向表中有目标lapic的id
+
+# 创建流程
 
