--- a/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
+++ b/Virtualization/QEMU/2. 初始化-创建虚拟机.md/2. QEMU初始化.md
@@ -81,6 +81,8 @@ int main()
  |       |   ├─ kvm_vm_ioctl(s, KVM_SET_TSS_ADDR, identity_base + 0x1000);        // 与kvm交互, 架构相关特性检查
  |       |   ├─ e820_add_entry(identity_base, 0x4000, E820_RESERVED);        // 
  |       ├─ kvm_irqchip_create()             // 创建中断管理
+ |       |   ├─ kvm_check_extension()        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ kvm_vm_ioctl(s, KVM_SET_IDENTITY_MAP_ADDR, &identity_base);        // 与kvm交互, 架构相关特性检查
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
  ├─ qemu_init_cpu_loop()                     // 初始化 vCPU 线程竞争的锁
