--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -41,3 +41,20 @@ PIC有三个重要的寄存器:
 
 # 创建流程
 
+## QEMU
+
+创建入口:
+
+PIC创建:
+
+```cpp
+// kvm-all.c/kvm_init/kvm_irqchip_create
+kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
+```
+
+PIT创建:
+
+```cpp
+// i8254.c
+kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
+```
