--- Auto-Git Commit ---

--- a/Virtualization/QEMU/1. 原理概述/4. 代码结构分析.md
+++ b/Virtualization/QEMU/1. 原理概述/4. 代码结构分析.md
@@ -197,7 +197,7 @@ tb_gen_code
 
 在CPU虚拟化访问接口中: pc\_init1(hw/i386/pc\_piix.c) → pc\_cpus\_init(hw/i386/pc.c) → pc\_new\_cpu(hw/i386/pc.c)
 
-```
+```cpp
 x86_cpu_realizefn  架构相关初始化函数 // target/i386/cpu.c
     ->qemu_init_vcpu  // cpus.c
         ->qemu_tcg_init_vcpu // cpus.c
