--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/中断虚拟化.md
@@ -39,11 +39,7 @@ PIC有三个重要的寄存器:
 
 修正: 重定向表中有目标lapic的id
 
-# 创建流程
-
-## QEMU
-
-创建入口:
+# QEMU
 
 PIC创建:
 
@@ -58,3 +54,6 @@ PIT创建:
 // i8254.c
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
+
+# PIC的创建
+
