--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -1,7 +1,7 @@
 
-虚拟机的中断源大致有两种方式，来自于用户空间qemu和来自于KVM内部。
+**虚拟机**的**中断源**大致有两种方式，来自于**用户空间qemu**和来自于**KVM内部**。
 
-中断虚拟化起始关键在于对中断控制器的虚拟化，中断控制器目前主要有APIC，这种架构下设备控制器通过某种触发方式通知IO APIC，IO APIC根据自身维护的重定向表pci irq routing table格式化出一条中断消息，把中断消息发送给local APIC，local APIC局部与CPU，即每个CPU一个，local APIC 具备传统中断控制器的相关功能以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。在KVM架构下，每个KVM虚拟机维护一个Io APIC，但是每个VCPU有一个local APIC。
+中断虚拟化**起始关键**在于**对中断控制器的虚拟化**，中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，IO APIC根据自身维护的重定向表pci irq routing table格式化出一条中断消息，把中断消息发送给local APIC，local APIC局部与CPU，即每个CPU一个，local APIC 具备传统中断控制器的相关功能以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等，针对这些关键部件的虚拟化是中断虚拟化的重点。在KVM架构下，每个KVM虚拟机维护一个Io APIC，但是每个VCPU有一个local APIC。
 
 核心数据结构介绍：
 
