--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -136,15 +136,15 @@ APIC系统中, 中断的发起大致流程如下.
 
 ### 1.5.2 中断的优先级
 
-在使用**PIC**的系统中, PIC的**管脚**决定了**中断的优先级**, 连接IR0的设备具有最高优先级, 连接IR7的设备优先级最低. 
+在使用**PIC**的系统中, PIC的**管脚**决定了**中断的优先级**, 连接**IR0**的设备具有**最高优先级**, 连接**IR7**的设备**优先级最低**. 
 
-在**APIC**系统中, IOAPIC的管脚不再具备优先级, 设备的优先级由它所连接管脚对应**RTE中的vector字段**决定. **vector**是x86架构用于索引**IDT表的下标**, 范围从0\~255, **值越大优先级越高**. 其中, **32\~255**可供外部中断使用.
+在**APIC**系统中, **IOAPIC的管脚**不再具备优先级, 设备的优先级由它所连接管脚对应**RTE中的vector字段**决定. **vector**是x86架构用于索引**IDT表的下标**, 范围从0\~255, **值越大优先级越高**. 其中, **32\~255**可供外部中断使用.
 
 在**现代操作系统**中, 有几个概念和vector常联系在一起使用, 简单介绍下.
 
-⓵ IRQ: PIC时代的产物, 由于ISA设备通常是连接到固定PIC管脚, 所以说一个设备的IRQ实际是指它连接的PIC管脚号. **IRQ暗示着中断优先级**. 进入到APIC时代后, 仍习惯用IRQ来表示一个设备的中断号, 但对于16以下的IRQ, 它们可能不再与IOAPIC的管脚对应.
+⓵ **IRQ**: PIC时代的产物, 由于ISA设备通常是连接到固定PIC管脚, 所以说一个设备的IRQ实际是指它连接的PIC管脚号. **IRQ暗示着中断优先级**. 进入到APIC时代后, 仍习惯用IRQ来表示一个设备的中断号, 但对于16以下的IRQ, 它们可能不再与IOAPIC的管脚对应.
 
-⓶ GSI(Global System Interrupt): **ACPI引入的概念**, 它为系统中**每个中断源**指定了一个**唯一的中断号**. IRQ和GSI在APIC系统中常被混用, 实际上对于**15以上的IRQ**, 它和GSI相等.
+⓶ **GSI**(Global System Interrupt): **ACPI引入的概念**, 它为系统中**每个中断源**指定了一个**唯一的中断号**. IRQ和GSI在APIC系统中常被混用, 实际上对于**15以上的IRQ**, 它和GSI相等.
 
 这里, GSI和IRQ可以看作等同的概念, 表示某个设备的中断号. 它们与**vector的关系**由操作系统决定, 通常是在**设备驱动注册中断处理程序**时由**操作系统分配**.
 
