--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -14,6 +14,8 @@
 
 #ifdef CONFIG_HAVE_KVM_IRQ_ROUTING
 struct kvm_irq_routing_table {
+        // 3个IRQ芯片, 分别有24个引脚
+        // 引脚的GSI号
         int chip[KVM_NR_IRQCHIPS][KVM_IRQCHIP_NUM_PINS];
         u32 nr_rt_entries;
         /*
@@ -25,5 +27,5 @@ struct kvm_irq_routing_table {
 #endif
 ```
 
-这个是一个**中断路由表**，每个KVM都有一个， **chip**是一个**二维数组**，表示**三个芯片**的各个管脚，每个芯片有24个管脚，每个数组项纪录对应管脚的GSI号；rt_entries是一个指针，指向一个kvm_kernel_irq_routing_entry数组，数组中共有nr_rt_entries项，每项对应一个IRQ；map其实可以理解为一个链表头数组，可以根据GSi号作为索引，找到同一IRQ关联的所有kvm_kernel_irq_routing_entry。具体中断路由表的初始化部分见本文最后一节
+这个是一个**中断路由表**，每个KVM都有一个， **chip**是一个**二维数组**，表示**三个芯片**的**各个管脚**，**每个芯片**有**24个管脚**，**每个数组项**纪录对应管脚的**GSI号**；rt_entries是一个指针，指向一个kvm_kernel_irq_routing_entry数组，数组中共有nr_rt_entries项，每项对应一个IRQ；map其实可以理解为一个链表头数组，可以根据GSi号作为索引，找到同一IRQ关联的所有kvm_kernel_irq_routing_entry。具体中断路由表的初始化部分见本文最后一节
 
