--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -27,5 +27,38 @@ struct kvm_irq_routing_table {
 #endif
 ```
 
-这个是一个**中断路由表**，每个KVM都有一个， **chip**是一个**二维数组**，表示**三个芯片**的**各个管脚**，**每个芯片**有**24个管脚**，**每个数组项**纪录对应管脚的**GSI号**；rt_entries是一个指针，指向一个kvm_kernel_irq_routing_entry数组，数组中共有nr_rt_entries项，每项对应一个IRQ；map其实可以理解为一个链表头数组，可以根据GSi号作为索引，找到同一IRQ关联的所有kvm_kernel_irq_routing_entry。具体中断路由表的初始化部分见本文最后一节
+这个是一个**中断路由表**，每个KVM都有一个.
 
+**chip**是一个**二维数组**，表示**三个芯片**的**各个管脚**，**每个芯片**有**24个管脚**，**每个数组项**纪录对应管脚的**GSI号**；
+
+**GSI**(Global System Interrupt): **ACPI引入的概念**, 它为系统中**每个中断源**指定了一个**唯一的中断号**. IRQ和GSI在APIC系统中常被混用, 实际上对于**15以上的IRQ**, 它**和GSI相等**.
+
+`rt_entries`是一个指针，指向一个`kvm_kernel_irq_routing_entry`**数组**，数组中共有**nr_rt_entries**项，每项对应一个IRQ；
+
+map其实可以理解为一个链表头数组，可以根据GSi号作为索引，找到同一IRQ关联的所有kvm_kernel_irq_routing_entry。具体中断路由表的初始化部分见本文最后一节
+
+```cpp
+struct kvm_kernel_irq_routing_entry {
+        u32 gsi;
+        u32 type;
+        int (*set)(struct kvm_kernel_irq_routing_entry *e,
+                   struct kvm *kvm, int irq_source_id, int level,
+                   bool line_status);
+        union {
+                struct {
+                        unsigned irqchip;
+                        unsigned pin;
+                } irqchip;
+                struct {
+                        u32 address_lo;
+                        u32 address_hi;
+                        u32 data;
+                        u32 flags;
+                        u32 devid;
+                } msi;
+                struct kvm_s390_adapter_int adapter;
+                struct kvm_hv_sint hv_sint;
+        };
+        struct hlist_node link;
+};
+```
