--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -35,12 +35,16 @@ struct kvm_irq_routing_table {
 
 `rt_entries`是一个指针，指向一个`kvm_kernel_irq_routing_entry`**数组**，数组中共有**nr_rt_entries**项，每项对应一个IRQ；
 
-map其实可以理解为一个链表头数组，可以根据GSi号作为索引，找到同一IRQ关联的所有kvm_kernel_irq_routing_entry。具体中断路由表的初始化部分见本文最后一节
+map其实可以理解为一个**链表头数组**，可以根据**GSI号**作为索引，找到**同一IRQ**关联的所有`kvm_kernel_irq_routing_entry`。
+
+具体中断路由表的初始化部分见本文最后一节
 
 ```cpp
 struct kvm_kernel_irq_routing_entry {
+        // 该entry对应的GSI号
         u32 gsi;
         u32 type;
+        // 该GSI关联的触发方式
         int (*set)(struct kvm_kernel_irq_routing_entry *e,
                    struct kvm *kvm, int irq_source_id, int level,
                    bool line_status);
@@ -62,3 +66,5 @@ struct kvm_kernel_irq_routing_entry {
         struct hlist_node link;
 };
 ```
+
+GSI是该entry对应的**GSI号**，一般和IRQ是一样，set方法是该IRQ关联的触发方法，通过该方法把IRQ传递给IO-APIC，；link就是连接点，连接在上面同一IRQ对应的map上；
