--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -63,8 +63,15 @@ struct kvm_kernel_irq_routing_entry {
                 struct kvm_s390_adapter_int adapter;
                 struct kvm_hv_sint hv_sint;
         };
+        // 
         struct hlist_node link;
 };
 ```
 
-GSI是该entry对应的**GSI号**，一般和IRQ是一样，set方法是该IRQ关联的触发方法，通过该方法把IRQ传递给IO-APIC，；link就是连接点，连接在上面同一IRQ对应的map上；
+GSI是该entry对应的**GSI号**，一般和IRQ是一样，
+
+set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-APIC**，；
+
+link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
+
+## 中断注入在KVM内部流程起始于一个函数kvm_set_irq
