--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -75,3 +75,40 @@ set方法是该IRQ关联的触发方法，通过该方法把**IRQ传递给IO-API
 link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；
 
 ## 中断注入在KVM内部流程起始于一个函数kvm_set_irq
+
+```cpp
+/*
+ * Return value:
+ *  < 0   Interrupt was ignored (masked or not delivered for other reasons)
+ *  = 0   Interrupt was coalesced (previous irq is still pending)
+ *  > 0   Number of CPUs interrupt was delivered to
+ */
+int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
+                bool line_status)
+{
+        struct kvm_kernel_irq_routing_entry irq_set[KVM_NR_IRQCHIPS];
+        int ret = -1, i, idx;
+
+        trace_kvm_set_irq(irq, level, irq_source_id);
+
+        /* Not possible to detect if the guest uses the PIC or the
+         * IOAPIC.  So set the bit in both. The guest will ignore
+         * writes to the unused one.
+         */
+        idx = srcu_read_lock(&kvm->irq_srcu);
+        i = kvm_irq_map_gsi(kvm, irq_set, irq);
+        srcu_read_unlock(&kvm->irq_srcu, idx);
+
+        while (i--) {
+                int r;
+                r = irq_set[i].set(&irq_set[i], kvm, irq_source_id, level,
+                                   line_status);
+                if (r < 0)
+                        continue;
+
+                ret = r + ((ret < 0) ? 0 : ret);
+        }
+
+        return ret;
+}
+```
