--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -98,7 +98,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
         idx = srcu_read_lock(&kvm->irq_srcu);
         i = kvm_irq_map_gsi(kvm, irq_set, irq);
         srcu_read_unlock(&kvm->irq_srcu, idx);
-
+        /* 依次调用同一个irq上的所有芯片的set方法 */
         while (i--) {
                 int r;
                 r = irq_set[i].set(&irq_set[i], kvm, irq_source_id, level,
@@ -112,3 +112,5 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
         return ret;
 }
 ```
+
+**kvm**指定特定的虚拟机，`irq_source_id`是**中断源ID**，一般有`KVM_USERSPACE_IRQ_SOURCE_ID`和`KVM_IRQFD_RESAMPLE_IRQ_SOURCE_ID`；**irq**是**全局的中断号**，**level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。回到函数中，首先要收集的是同一irq上注册的所有的设备信息，这主要在于irq共享的情况，非共享的情况下最多就一个。设备信息抽象成一个kvm_kernel_irq_routing_entry，这里临时放到irq_set数组中。然后对于数组中的每个元素，调用其set方法，目前大都是APIC架构，因此set方法基本都是kvm_set_ioapic_irq，在传统pic情况下，是kvm_set_pic_irq。我们以kvm_set_ioapic_irq为例进行分析，该函数没有实质性的操作，就调用了kvm_ioapic_set_irq函数
