--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -27,7 +27,7 @@ struct kvm_irq_routing_table {
 #endif
 ```
 
-这个是一个**中断路由表**，每个KVM都有一个.
+这个是一个**中断路由表**，**每个KVM**都有一个.
 
 **chip**是一个**二维数组**，表示**三个芯片**的**各个管脚**，**每个芯片**有**24个管脚**，**每个数组项**纪录对应管脚的**GSI号**；
 
@@ -96,7 +96,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
          * writes to the unused one.
          */
         idx = srcu_read_lock(&kvm->irq_srcu);
-        // 同一个irq注册的所有设备, 
+        // 同一个irq注册的所有设备, 存于irq_set, 返回数量
         i = kvm_irq_map_gsi(kvm, irq_set, irq);
         srcu_read_unlock(&kvm->irq_srcu, idx);
         /* 依次调用同一个irq上的所有芯片的set方法 */
@@ -121,4 +121,8 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 - **irq**是**全局的中断号**，
 - **level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。
 
-回到函数中，首先要收集的是**同一irq**上注册的**所有的设备信息**，这主要在于**irq共享**的情况，非共享的情况下最多就一个。设备信息抽象成一个`kvm_kernel_irq_routing_entry`，这里临时放到irq_set数组中。然后对于数组中的每个元素，调用其set方法，目前大都是APIC架构，因此set方法基本都是kvm_set_ioapic_irq，在传统pic情况下，是kvm_set_pic_irq。我们以kvm_set_ioapic_irq为例进行分析，该函数没有实质性的操作，就调用了kvm_ioapic_set_irq函数
+回到函数中，首先要收集的是**同一irq**上注册的**所有的设备信息**，这主要在于**irq共享**的情况，非共享的情况下最多就一个。**设备信息**抽象成一个`kvm_kernel_irq_routing_entry`，这里临时放到`irq_set`数组中。
+
+然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`。
+
+我们以`kvm_set_ioapic_irq`为例进行分析，该函数**没有实质性的操作**，就调用了`kvm_ioapic_set_irq`函数
