--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -126,3 +126,94 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 然后对于数组中的**每个元素**，调用**其set方法**，目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`，在**传统pic**情况下，是`kvm_set_pic_irq`。
 
 我们以`kvm_set_ioapic_irq`为例进行分析，该函数**没有实质性的操作**，就调用了`kvm_ioapic_set_irq`函数
+
+```cpp
+static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
+                              struct kvm *kvm, int irq_source_id, int level,
+                              bool line_status)
+{
+        struct kvm_ioapic *ioapic = kvm->arch.vioapic;
+        return kvm_ioapic_set_irq(ioapic, e->irqchip.pin, irq_source_id, level,
+                                line_status);
+}
+
+int kvm_ioapic_set_irq(struct kvm_ioapic *ioapic, int irq, int irq_source_id,
+                       int level, bool line_status)
+{
+        int ret, irq_level;
+
+        BUG_ON(irq < 0 || irq >= IOAPIC_NUM_PINS);
+
+        spin_lock(&ioapic->lock);
+        /*判断请求高电平还是低电平*/
+        irq_level = __kvm_irq_line_state(&ioapic->irq_states[irq],
+                                         irq_source_id, level);
+        ret = ioapic_set_irq(ioapic, irq, irq_level, line_status);
+
+        spin_unlock(&ioapic->lock);
+
+        return ret;
+}
+
+static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
+                int irq_level, bool line_status)
+{
+        union kvm_ioapic_redirect_entry entry;
+        //irq对应的位
+        u32 mask = 1 << irq;
+        u32 old_irr;
+        int edge, ret;
+
+        entry = ioapic->redirtbl[irq];
+        /*判断触发方式*/
+        edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
+        /*模拟低电平*/
+        if (!irq_level) {
+                ioapic->irr &= ~mask;
+                ret = 1;
+                goto out;
+        }
+
+        /*
+         * AMD SVM AVIC accelerate EOI write and do not trap,
+         * in-kernel IOAPIC will not be able to receive the EOI.
+         * In this case, we do lazy update of the pending EOI when
+         * trying to set IOAPIC irq.
+         */
+        if (kvm_apicv_activated(ioapic->kvm))
+                ioapic_lazy_update_eoi(ioapic, irq);
+
+        /*
+         * Return 0 for coalesced interrupts; for edge-triggered interrupts,
+         * this only happens if a previous edge has not been delivered due
+         * to masking.  For level interrupts, the remote_irr field tells
+         * us if the interrupt is waiting for an EOI.
+         *
+         * RTC is special: it is edge-triggered, but userspace likes to know
+         * if it has been already ack-ed via EOI because coalesced RTC
+         * interrupts lead to time drift in Windows guests.  So we track
+         * EOI manually for the RTC interrupt.
+         */
+        if (irq == RTC_GSI && line_status &&
+                rtc_irq_check_coalesced(ioapic)) {
+                ret = 0;
+                goto out;
+        }
+
+        old_irr = ioapic->irr;
+        ioapic->irr |= mask;
+        if (edge) {
+                ioapic->irr_delivered &= ~mask;
+                if (old_irr == ioapic->irr) {
+                        ret = 0;
+                        goto out;
+                }
+        }
+
+        ret = ioapic_service(ioapic, irq, line_status);
+
+out:
+        trace_kvm_ioapic_set_irq(entry.bits, irq, ret == 0);
+        return ret;
+}
+```
