--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -202,7 +202,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
 
         old_irr = ioapic->irr;
         ioapic->irr |= mask;
-        // 
+        // 如果是电平触发
         if (edge) {
                 ioapic->irr_delivered &= ~mask;
                 if (old_irr == ioapic->irr) {
@@ -218,3 +218,10 @@ out:
         return ret;
 }
 ```
+
+到这里，中断已经到达**模拟的IO-APIC**了，IO-APIC最重要的就是它的**重定向表**，针对重定向表的操作主要在`ioapic_service`中，之前都是做一些准备工作，在进入`ioapic_service`函数之前，主要有**两个任务**：
+
+1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
+
+2、设置**ioapic的irr寄存器**。之前我们说过，电触发需要两个边沿触发来模拟，前后电平相反。这里就要先做判断是对应哪一次。只有首次触发才会进行后续的操作，而二次触发相当于reset操作，就是把ioapic的irr寄存器清除。在电平触发模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+
