--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -202,15 +202,16 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
 
         old_irr = ioapic->irr;
         ioapic->irr |= mask;
-        // 如果是电平触发
+        // 如果是边沿触发
         if (edge) {
                 ioapic->irr_delivered &= ~mask;
+                // 旧的irr寄存器与请求的irr相等
                 if (old_irr == ioapic->irr) {
                         ret = 0;
                         goto out;
                 }
         }
-
+        // 
         ret = ioapic_service(ioapic, irq, line_status);
 
 out:
@@ -223,5 +224,5 @@ out:
 
 1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
 
-2、设置**ioapic的irr寄存器**。之前我们说过，电触发需要**两个边沿触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而二次触发相当于reset操作，就是把**ioapic的irr寄存器清除**。在电平触发模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+2、设置**ioapic的irr寄存器**。之前我们说过，电触发需要**两个边沿触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。在**电平触发**模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
 
