--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -169,6 +169,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
         /*模拟低电平*/
         if (!irq_level) {
+                // 
                 ioapic->irr &= ~mask;
                 ret = 1;
                 goto out;
@@ -205,13 +206,13 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         // 如果是边沿触发
         if (edge) {
                 ioapic->irr_delivered &= ~mask;
-                // 旧的irr寄存器与请求的irr相等
+                // 边沿触发且旧的irr寄存器与请求的irr相等
                 if (old_irr == ioapic->irr) {
                         ret = 0;
                         goto out;
                 }
         }
-        // 
+        // 旧的irr寄存器与请求的irr不等
         ret = ioapic_service(ioapic, irq, line_status);
 
 out:
