--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -167,9 +167,9 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         entry = ioapic->redirtbl[irq];
         /*判断触发方式*/
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
-        /*模拟低电平*/
+        /* 如果低电平, 表明是边沿触发的第二次触发??? */
         if (!irq_level) {
-                // 
+                // 清理
                 ioapic->irr &= ~mask;
                 ret = 1;
                 goto out;
@@ -225,5 +225,5 @@ out:
 
 1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
 
-2、设置**ioapic的irr寄存器**。之前我们说过，边沿触发需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。在**电平触发**模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+2、设置**ioapic的irr寄存器**。之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。在**电平触发**模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
 
