--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -167,9 +167,9 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
         entry = ioapic->redirtbl[irq];
         /*判断触发方式*/
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
-        /* 如果低电平, 表明是边沿触发的第二次触发??? */
+        /* 如果低电平, 表明是模拟边沿触发的第二次触发??? 清理irr对应位后直接返回*/
         if (!irq_level) {
-                // 清理
+                // 清理该irq位
                 ioapic->irr &= ~mask;
                 ret = 1;
                 goto out;
@@ -200,8 +200,9 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
                 ret = 0;
                 goto out;
         }
-
+        // 原来的irr寄存器
         old_irr = ioapic->irr;
+        // irr相应位置位
         ioapic->irr |= mask;
         // 如果是边沿触发
         if (edge) {
@@ -212,7 +213,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
                         goto out;
                 }
         }
-        // 旧的irr寄存器与请求的irr不等
+        // 边沿触发或水平触发, 旧的irr寄存器与请求的irr不等
         ret = ioapic_service(ioapic, irq, line_status);
 
 out:
@@ -225,5 +226,50 @@ out:
 
 1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
 
-2、设置**ioapic的irr寄存器**。之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。在**电平触发**模式下且请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+2、设置**ioapic的irr寄存器**。之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。当请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+
+```cpp
+static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
+{
+        union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
+        struct kvm_lapic_irq irqe;
+        int ret;
+
+        if (entry->fields.mask ||
+            (entry->fields.trig_mode == IOAPIC_LEVEL_TRIG &&
+            entry->fields.remote_irr))
+                return -1;
+
+        irqe.dest_id = entry->fields.dest_id;
+        irqe.vector = entry->fields.vector;
+        irqe.dest_mode = kvm_lapic_irq_dest_mode(!!entry->fields.dest_mode);
+        irqe.trig_mode = entry->fields.trig_mode;
+        irqe.delivery_mode = entry->fields.delivery_mode << 8;
+        irqe.level = 1;
+        irqe.shorthand = APIC_DEST_NOSHORT;
+        irqe.msi_redir_hint = false;
+
+        if (irqe.trig_mode == IOAPIC_EDGE_TRIG)
+                ioapic->irr_delivered |= 1 << irq;
+
+        if (irq == RTC_GSI && line_status) {
+                /*
+                 * pending_eoi cannot ever become negative (see
+                 * rtc_status_pending_eoi_check_valid) and the caller
+                 * ensures that it is only called if it is >= zero, namely
+                 * if rtc_irq_check_coalesced returns false).
+                 */
+                BUG_ON(ioapic->rtc_status.pending_eoi != 0);
+                ret = kvm_irq_delivery_to_apic(ioapic->kvm, NULL, &irqe,
+                                               &ioapic->rtc_status.dest_map);
+                ioapic->rtc_status.pending_eoi = (ret < 0 ? 0 : ret);
+        } else
+                ret = kvm_irq_delivery_to_apic(ioapic->kvm, NULL, &irqe, NULL);
+
+        if (ret && irqe.trig_mode == IOAPIC_LEVEL_TRIG)
+                entry->fields.remote_irr = 1;
+
+        return ret;
+}
+```
 
