--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -132,6 +132,7 @@ static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
                               struct kvm *kvm, int irq_source_id, int level,
                               bool line_status)
 {
+        // 获取该虚拟机的ioapic
         struct kvm_ioapic *ioapic = kvm->arch.vioapic;
         return kvm_ioapic_set_irq(ioapic, e->irqchip.pin, irq_source_id, level,
                                 line_status);
@@ -231,6 +232,7 @@ out:
 ```cpp
 static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 {
+        // 获取重定向表项
         union kvm_ioapic_redirect_entry *entry = &ioapic->redirtbl[irq];
         struct kvm_lapic_irq irqe;
         int ret;
@@ -272,4 +274,6 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
         return ret;
 }
 ```
+
+该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，然后向**本地APIC传递**，即调用ioapic_deliver函数，当然前提是kvm_ioapic_redirect_entry没有设置mask，ioapic_deliver主要任务就是根据kvm_ioapic_redirect_entry，构建kvm_lapic_irq，这就类似于在总线上的传递过程。构建之后调用kvm_irq_delivery_to_apic，该函数会把消息传递给相应的VCPU ，具体需要调用kvm_apic_set_irq函数，继而调用__apic_accept_irq，该函数中会根据不同的传递模式处理消息,大部分情况都是APIC_DM_FIXED，在该模式下，中断被传递到特定的CPU，其中会调用kvm_x86_ops->deliver_posted_interrupt，实际上对应于vmx.c中的vmx_deliver_posted_interrupt
 
