--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -160,11 +160,11 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
                 int irq_level, bool line_status)
 {
         union kvm_ioapic_redirect_entry entry;
-        //irq对应的位
+        // irq对应的位
         u32 mask = 1 << irq;
         u32 old_irr;
         int edge, ret;
-
+        // 该irq对应的重定向表项
         entry = ioapic->redirtbl[irq];
         /*判断触发方式*/
         edge = (entry.fields.trig_mode == IOAPIC_EDGE_TRIG);
@@ -228,7 +228,9 @@ out:
 
 1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
 
-2、设置**ioapic的irr寄存器**。之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。当请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
+2、设置**ioapic的irr寄存器**。
+
+之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。当请求的irq和ioapic中保存的irq不一致，就会对其进行更新，进入ioapic_service函数。
 
 ```cpp
 static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
