--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -247,6 +247,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
         // 1. 该entry设置了mask
         // 或者
         // 2. 电平触发的
+        // 直接返回
         if (entry->fields.mask ||
             (entry->fields.trig_mode == IOAPIC_LEVEL_TRIG &&
             entry->fields.remote_irr))
@@ -286,5 +287,65 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 }
 ```
 
-该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，然后向**本地APIC传递**，即调用`ioapic_deliver`函数，当然前提是`kvm_ioapic_redirect_entry`**没有设置mask**，ioapic_deliver主要任务就是根据kvm_ioapic_redirect_entry，构建kvm_lapic_irq，这就类似于在总线上的传递过程。构建之后调用kvm_irq_delivery_to_apic，该函数会把消息传递给相应的VCPU ，具体需要调用kvm_apic_set_irq函数，继而调用__apic_accept_irq，该函数中会根据不同的传递模式处理消息,大部分情况都是APIC_DM_FIXED，在该模式下，中断被传递到特定的CPU，其中会调用kvm_x86_ops->deliver_posted_interrupt，实际上对应于vmx.c中的vmx_deliver_posted_interrupt
+该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，然后向**本地APIC传递**，即调用`ioapic_deliver`函数，当然前提是`kvm_ioapic_redirect_entry`**没有设置mask**，根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。构建之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
 
+```cpp
+int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
+                struct kvm_lapic_irq *irq, struct dest_map *dest_map)
+{
+        int i, r = -1;
+        struct kvm_vcpu *vcpu, *lowest = NULL;
+        unsigned long dest_vcpu_bitmap[BITS_TO_LONGS(KVM_MAX_VCPUS)];
+        unsigned int dest_vcpus = 0;
+
+        if (kvm_irq_delivery_to_apic_fast(kvm, src, irq, &r, dest_map))
+                return r;
+
+        if (irq->dest_mode == APIC_DEST_PHYSICAL &&
+            irq->dest_id == 0xff && kvm_lowest_prio_delivery(irq)) {
+                printk(KERN_INFO "kvm: apic: phys broadcast and lowest prio\n");
+                irq->delivery_mode = APIC_DM_FIXED;
+        }
+
+        memset(dest_vcpu_bitmap, 0, sizeof(dest_vcpu_bitmap));
+
+        kvm_for_each_vcpu(i, vcpu, kvm) {
+                if (!kvm_apic_present(vcpu))
+                        continue;
+
+                if (!kvm_apic_match_dest(vcpu, src, irq->shorthand,
+                                        irq->dest_id, irq->dest_mode))
+                        continue;
+
+                if (!kvm_lowest_prio_delivery(irq)) {
+                        if (r < 0)
+                                r = 0;
+                        r += kvm_apic_set_irq(vcpu, irq, dest_map);
+                } else if (kvm_apic_sw_enabled(vcpu->arch.apic)) {
+                        if (!kvm_vector_hashing_enabled()) {
+                                if (!lowest)
+                                        lowest = vcpu;
+                                else if (kvm_apic_compare_prio(vcpu, lowest) < 0)
+                                        lowest = vcpu;
+                        } else {
+                                __set_bit(i, dest_vcpu_bitmap);
+                                dest_vcpus++;
+                        }
+                }
+        }
+
+        if (dest_vcpus != 0) {
+                int idx = kvm_vector_to_index(irq->vector, dest_vcpus,
+                                        dest_vcpu_bitmap, KVM_MAX_VCPUS);
+
+                lowest = kvm_get_vcpu(kvm, idx);
+        }
+
+        if (lowest)
+                r = kvm_apic_set_irq(lowest, irq, dest_map);
+
+        return r;
+}
+```
+
+具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`，该函数中会根据**不同的传递模式**处理消息,大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
