--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -287,7 +287,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 }
 ```
 
-该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，然后向**本地APIC传递**，即调用`ioapic_deliver`函数，当然前提是`kvm_ioapic_redirect_entry`**没有设置mask**，根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。构建之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
+该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，判断`kvm_ioapic_redirect_entry`**没有设置mask**，然后根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
 
 ```cpp
 int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
@@ -346,6 +346,196 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
 
         return r;
 }
+
+int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
+                     struct dest_map *dest_map)
+{
+        struct kvm_lapic *apic = vcpu->arch.apic;
+
+        return __apic_accept_irq(apic, irq->delivery_mode, irq->vector,
+                        irq->level, irq->trig_mode, dest_map);
+}
 ```
 
 具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`，该函数中会根据**不同的传递模式**处理消息,大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
+
+```cpp
+/*
+ * Add a pending IRQ into lapic.
+ * Return 1 if successfully added and 0 if discarded.
+ */
+static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
+                             int vector, int level, int trig_mode,
+                             struct dest_map *dest_map)
+{
+        int result = 0;
+        struct kvm_vcpu *vcpu = apic->vcpu;
+
+        trace_kvm_apic_accept_irq(vcpu->vcpu_id, delivery_mode,
+                                  trig_mode, vector);
+        switch (delivery_mode) {
+        case APIC_DM_LOWEST:
+                vcpu->arch.apic_arb_prio++;
+                /* fall through */
+        case APIC_DM_FIXED:
+                if (unlikely(trig_mode && !level))
+                        break;
+
+                /* FIXME add logic for vcpu on reset */
+                if (unlikely(!apic_enabled(apic)))
+                        break;
+
+                result = 1;
+
+                if (dest_map) {
+                        __set_bit(vcpu->vcpu_id, dest_map->map);
+                        dest_map->vectors[vcpu->vcpu_id] = vector;
+                }
+
+                if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
+                        if (trig_mode)
+                                kvm_lapic_set_vector(vector,
+                                                     apic->regs + APIC_TMR);
+                        else
+                                kvm_lapic_clear_vector(vector,
+                                                       apic->regs + APIC_TMR);
+                }
+
+                if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
+                        kvm_lapic_set_irr(vector, apic);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_REMRD:
+                result = 1;
+                vcpu->arch.pv.pv_unhalted = 1;
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_SMI:
+                result = 1;
+                kvm_make_request(KVM_REQ_SMI, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_NMI:
+                result = 1;
+                kvm_inject_nmi(vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_INIT:
+                if (!trig_mode || level) {
+                        result = 1;
+                        /* assumes that there are only KVM_APIC_INIT/SIPI */
+                        apic->pending_events = (1UL << KVM_APIC_INIT);
+                        kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        kvm_vcpu_kick(vcpu);
+                }
+                break;
+
+        case APIC_DM_STARTUP:
+                result = 1;
+                apic->sipi_vector = vector;
+                /* make sure sipi_vector is visible for the receiver */
+                smp_wmb();
+                set_bit(KVM_APIC_SIPI, &apic->pending_events);
+                kvm_make_request(KVM_REQ_EVENT, vcpu);
+                kvm_vcpu_kick(vcpu);
+                break;
+
+        case APIC_DM_EXTINT:
+                /*
+                 * Should only be called by kvm_apic_local_deliver() with LVT0,
+                 * before NMI watchdog was enabled. Already handled by
+                 * kvm_apic_accept_pic_intr().
+                 */
+                break;
+
+        default:
+                printk(KERN_ERR "TODO: unsupported delivery mode %x\n",
+                       delivery_mode);
+                break;
+        }
+        return result;
+}
+```
+
+```cpp
+/*
+ * Send interrupt to vcpu via posted interrupt way.
+ * 1. If target vcpu is running(non-root mode), send posted interrupt
+ * notification to vcpu and hardware will sync PIR to vIRR atomically.
+ * 2. If target vcpu isn't running(root mode), kick it to pick up the
+ * interrupt from PIR in next vmentry.
+ */
+static int vmx_deliver_posted_interrupt(struct kvm_vcpu *vcpu, int vector)
+{
+        struct vcpu_vmx *vmx = to_vmx(vcpu);
+        int r;
+
+        r = vmx_deliver_nested_posted_interrupt(vcpu, vector);
+        if (!r)
+                return 0;
+
+        if (!vcpu->arch.apicv_active)
+                return -1;
+        // 设置位图
+        if (pi_test_and_set_pir(vector, &vmx->pi_desc))
+                return 0;
+        /*标记位图更新标志*/
+        /* If a previous notification has sent the IPI, nothing to do.  */
+        if (pi_test_and_set_on(&vmx->pi_desc))
+                return 0;
+
+        if (!kvm_vcpu_trigger_posted_interrupt(vcpu, false))
+                kvm_vcpu_kick(vcpu);
+
+        return 0;
+}
+
+static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
+                                                     bool nested)
+{
+#ifdef CONFIG_SMP
+        int pi_vec = nested ? POSTED_INTR_NESTED_VECTOR : POSTED_INTR_VECTOR;
+
+        if (vcpu->mode == IN_GUEST_MODE) {
+                /*
+                 * The vector of interrupt to be delivered to vcpu had
+                 * been set in PIR before this function.
+                 *
+                 * Following cases will be reached in this block, and
+                 * we always send a notification event in all cases as
+                 * explained below.
+                 *
+                 * Case 1: vcpu keeps in non-root mode. Sending a
+                 * notification event posts the interrupt to vcpu.
+                 *
+                 * Case 2: vcpu exits to root mode and is still
+                 * runnable. PIR will be synced to vIRR before the
+                 * next vcpu entry. Sending a notification event in
+                 * this case has no effect, as vcpu is not in root
+                 * mode.
+                 *
+                 * Case 3: vcpu exits to root mode and is blocked.
+                 * vcpu_block() has already synced PIR to vIRR and
+                 * never blocks vcpu if vIRR is not cleared. Therefore,
+                 * a blocked vcpu here does not wait for any requested
+                 * interrupts in PIR, and sending a notification event
+                 * which has no effect is safe here.
+                 */
+
+                apic->send_IPI_mask(get_cpu_mask(vcpu->cpu), pi_vec);
+                return true;
+        }
+#endif
+        return false;
+}
+```
+
+这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
+
