--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/Interrupt/2. 中断虚拟化.md
@@ -539,3 +539,8 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
 
 这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
 
+
+## 具体注入过程
+
+在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
+
