--- Auto-Git Commit ---

--- a/Linux/Tools/rt-tests/cyclictest/简介.md
+++ b/Linux/Tools/rt-tests/cyclictest/简介.md
@@ -229,3 +229,5 @@ either run as root or join realtime group
 Linux Foundation: https://wiki.linuxfoundation.org/realtime/documentation/howto/tools/rt-tests
 
 kernel.org: https://git.kernel.org/pub/scm/utils/rt-tests/rt-tests.git
+
+https://blog.csdn.net/ganggexiongqi/article/details/5841347 (未整理)
